<resources>
    <string name="app_name">Steuerung</string>
    <string name="connect">Connect</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="clear">CLEAR</string>
    <string name="response">Response</string>
    <string name="command">Command</string>
    <string name="textview">TextView</string>
    <string name="title_activity_steuerung__connected">Steuerung_Connected</string>
    <string name="errors">Errors</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
</resources>
